test/visibility/import/rename/noSuchOldName.good
noSuchOldName.chpl:4: In module 'User':
noSuchOldName.chpl:5: error: cannot rename symbol 'baz' as it is not defined in 'M'
